# yasnippet-cpp-online_judge

./: .yas-setup.el  CMakeLists.txt  binary_indexed_tree  binary_indexed_tree.h  binary_indexed_tree_2d  binary_indexed_tree_2d.h  binary_indexed_tree_3d  binary_indexed_tree_3d.h  binomial_coefficient_floating_point  binomial_coefficient_floating_point.h  binomial_coefficient_integer  binomial_coefficient_integer.h  charmap  charmap.h  conanfile.txt  convex_hull_chans_algorithm  convex_hull_chans_algorithm.h  convex_hull_chans_algorithm_test.h  convex_hull_grahams_scan  convex_hull_grahams_scan.h  convex_hull_jarvis_march  convex_hull_jarvis_march.h  convex_hull_jarvis_march_test.h  disjoint_set_union_by_size  disjoint_set_union_by_size.h  disjoint_set_union_randomized  disjoint_set_union_randomized.h  fenwick_tree  fenwick_tree.h  fenwick_tree_2d  fenwick_tree_2d.h  fenwick_tree_3d  fenwick_tree_3d.h  golden_section_search  golden_section_search.h  graph_adjacency_lists  graph_incidence_lists  greatest_common_divisor_by_division  greatest_common_divisor_by_division.h  greatest_common_divisor_by_division_recursive.h  (+62 more)
geometry/: 0_types  0_types.h  1_vector  1_vector.h  2_point  2_point.h  3_line  3_line.h  4_segment  4_segment.h  5_polygon  5_polygon.h  6_convex_polygon  6_convex_polygon.h
test/: CMakeLists.txt  binomial_coefficient_floating_point_test.cc  binomial_coefficient_integer_test.cc  charmap_test.cc  convex_hull_chans_algorithm_test.cc  convex_hull_grahams_scan_test.cc  convex_hull_jarvis_march_test.cc  disjoint_set_union_by_size_test.cc  disjoint_set_union_randomized_test.cc  fenwick_tree_2d_test.cc  fenwick_tree_3d_test.cc  fenwick_tree_test.cc  golden_section_search_test.cc  greatest_common_divisor_by_division_recursive_test.cc  greatest_common_divisor_by_division_test.cc  greatest_common_divisor_by_modulo_recursive_test.cc  greatest_common_divisor_by_modulo_test.cc  greatest_common_divisor_by_subtraction_test.cc  greatest_common_divisor_euclidean_test.cc  knuth_morris_pratt_test.cc  least_common_multiplier_test.cc  manachers_algorithm_test.cc  minmax_lazy_propagation.h  modular_arithmetics_test.cc  palindrome_count_manacher_algorithm_test.cc  palindrome_search_manachers_algorithm_test.cc  palindromic_tree_test.cc  pi_function_test.cc  prefix_function_test.cc  prime_number_linear_sieve_test.cc  prime_number_sieve_of_eratosthenes_test.cc  segment_tree_minmax.h  segment_tree_recursive_test.cc  segment_tree_test.cc  string_search_knuth_morris_pratt_test.cc  substring_search_kmp_algorithm_online_test.cc  substring_search_kmp_algorithm_test.cc  substring_search_knuth_morris_pratt_alternative_test.cc  substring_search_knuth_morris_pratt_test.cc  substring_search_z_algorithm_test.cc  (+6 more)
test/geometry/: geometry_test.cc
